1.6.5: February 12, 2009
 * 

1.6.4: February 12, 2009
 * Now ignoring certain unneeded HTML tags that end up in your notes when you
   copy and paste text from an MS Word document.
 * Fixed a bug in which clicking on the title field within a link pulldown did
   not position the text cursor there.
 * Fixed a bug in which clicking on an unfocused note didn't position the text
   cursor in the correct location.
 * Fixed bugs related to the display and hiding of previous note revisions.
 * Fixed a bug in which moving a note and then clicking the "changes" tab on
   any other note failed to show that note's previous revisions.
 * Fixed a bug in which hiding a note could produce a spurious save conflict
   notification error.

1.6.3: February 11, 2009
 * Introduced cache-busting code to make pages update more reliably after a
   new release.
 * Added initial (untested) support for Internet Explorer 8 beta.

1.6.2: February 11, 2009
 * Added drag-and-drop note reordering.
 * Fixed a visual bug in which a second title within a note had insufficient
   vertical spacing above it.

1.6.1: January 29, 2009
 * Fixed a bug in which hiding a focused note could (temporarily) leave an
   empty gap at the bottom of the page. 
 * Fixed a bug in which performing a search when search results were already
   open would just hide the initial search results without showing the new
   ones.
 * Fixed a bug in which emptying the trash worked but produced a spurious
   error message.

1.6.0: January 27, 2009
 * Switching between notebooks and loading notebooks is now much faster.
 * Several new keyboard shortcuts:
   * Switch to the next open note: Page down
   * Switch to the previous open note: Page up
   * Start a search: Ctrl-slash
   * Save the current note: Ctrl-space
 * Fixed various bugs related to the subscription page.
 * Dropped support for Internet Explorer version 6. But version 7+ is still
   fully supported!

1.5.12: December 30, 2008